# trunkServer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  SUMServer.sln  cmake_install.cmake
BattleServer/: BattleServer.vcxproj  BattleServer.vcxproj.filters  CMakeLists.txt  Makefile
BattleServer/Classes/: BattleDataCache.cpp  BattleDataCache.h  BattleMain.cpp  BattleModule.cpp  BattleModule.h  BattleServer.cpp  BattleServer.h  BattleService.cpp  BattleService.h  GateModule.cpp  Player.cpp  Player.h  PvpService.cpp  PvpService.h  PvpSettleResult.cpp  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  ServerService.cpp  ServiceHelper.h
BattleServer/common/: BattleHelper.cpp  BattleHelper.h  BattleLogic.cpp  BattleScene.cpp  BattleScene.h  BattleSerialize.cpp  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  CallSoldier.cpp  CallSoldier.h  ComponentCache.cpp  ComponentCache.h  GameObject.cpp  GameObject.h  Hero.cpp  Hero.h  Monster.cpp  Monster.h  Role.cpp  Role.h  RoleComm.h  Soldier.cpp  Soldier.h
BattleServer/gameFrame/: BattleModels.cpp  BattleModels.h  EventManager.h  RandomNumber.cpp  RandomNumber.h
BattleServer/logic/: AIActions.cpp  AIActions.h  AIComponent.cpp  AIComponent.h  AIConditions.cpp  AIConditions.h  Buff.cpp  Buff.h  BuffComponent.cpp  BuffComponent.h  BulletComponent.cpp  BulletComponent.h  CallComponent.cpp  CallComponent.h  Count.cpp  Count.h  Dispatch.cpp  Dispatch.h  HeroComponent.cpp  HeroComponent.h  LogicComponent.cpp  LogicComponent.h  ReplayRecorder.h  RoleComponent.cpp  RoleComponent.h  Skill.cpp  Skill.h  SkillComponent.cpp  SkillComponent.h  State.cpp  State.h  TargetSearcher.cpp  TargetSearcher.h
CenterServer/: CMakeLists.txt  CenterServer.vcxproj  CenterServer.vcxproj.filters  Makefile
CenterServer/Classes/: GateManager.cpp  GateManager.h  GateModule.cpp  RankHelper.cpp  RankHelper.h  RankMain.cpp  RankModule.cpp  RankModule.h  RankServer.cpp  RankServer.h  RankService.cpp  RankService.h  ServiceDef.h  ServiceHelper.h
ChatServer/: CMakeLists.txt  ChatServer.vcxproj  ChatServer.vcxproj.filters
ChatServer/Classes/: ChatClient.cpp  ChatClient.h  ChatConnect.cpp  ChatConnect.h  ChatHelper.cpp  ChatHelper.h  ChatListen.cpp  ChatListen.h  ChatMessageManager.cpp  ChatMessageManager.h  ChatModule.cpp  ChatModule.h  ChatServer.cpp  ChatServer.h  ChatService.cpp  ChatService.h  ConnectModule.cpp  ConnectModule.h  Main.cpp  NetworkManager.cpp  NetworkManager.h  NoticeService.cpp  NoticeService.h  ServerConfig.h
CheckServer/: CMakeLists.txt  CheckServer.vcxproj  CheckServer.vcxproj.filters  Makefile
CheckServer/Classes/: BaseModule.h  CheckListen.cpp  CheckListen.h  CheckModule.cpp  CheckModule.h  CheckServer.cpp  CheckServer.h  HttpCheckModel.cpp  HttpCheckModel.h  Main.cpp
Common/: CMakeLists.txt
Common/DBDriver/: CacheStorer.cpp  CacheStorer.h  DbStorer.cpp  DbStorer.h  IStorer.cpp  IStorer.h  MarkupSTL.cpp  MarkupSTL.h  NewRedisStorer.cpp  NewRedisStorer.h  RedisAsyncStorer.cpp  RedisAsyncStorer.h  RedisHelper.cpp  RedisHelper.h  RedisStorer.cpp  RedisStorer.h  Storage.cpp  Storage.h  StorageManager.cpp  StorageManager.h
Common/GameCommon/: Achievement.cpp  Achievement.h  ActiveHelper.cpp  ActiveHelper.h  ActiveTask.cpp  ActiveTask.h  ActiveTimeObject.cpp  ActiveTimeObject.h  BattleDataHelper.cpp  BattleDataHelper.h  BufferData.cpp  BufferData.h  CommOssHelper.cpp  CommOssHelper.h  CommStructs.h  CommTools.h  CommonHelper.cpp  CommonHelper.h  EquipComm.h  GameDef.h  ItemDrop.cpp  ItemDrop.h  KxCSComm.h  KxCommManager.cpp  KxCommManager.h  MD5.cpp  MD5.h  MailHelper.cpp  MailHelper.h  MemoryOperation.cpp  MemoryOperation.h  ModelHelper.cpp  ModelHelper.h  NoticeHelper.cpp  NoticeHelper.h  PropUseHelper.cpp  PropUseHelper.h  PvpSettleResult.cpp  PvpSettleResult.h  RandGenerator.cpp  (+11 more)
Common/GameConfig/: ConfActive.cpp  ConfActive.h  ConfAnalytic.cpp  ConfAnalytic.h  ConfArena.cpp  ConfArena.h  ConfFight.cpp  ConfFight.h  ConfGameSetting.cpp  ConfGameSetting.h  ConfGuide.cpp  ConfGuide.h  ConfHall.cpp  ConfHall.h  ConfLanguage.cpp  ConfLanguage.h  ConfManager.cpp  ConfManager.h  ConfMusic.cpp  ConfMusic.h  ConfOther.cpp  ConfOther.h  ConfRole.cpp  ConfRole.h  ConfStage.cpp  ConfStage.h  ConfUnion.cpp  ConfUnion.h  CsvLoader.cpp  CsvLoader.h
Common/GameModel/: AchievementModel.cpp  AchievementModel.h  ActivityInstanceModel.cpp  ActivityInstanceModel.h  BagModel.cpp  BagModel.h  BillnoModel.cpp  BillnoModel.h  BlueDiamondModel.cpp  BlueDiamondModel.h  EquipModel.cpp  EquipModel.h  ExpiditonRankModel.cpp  ExpiditonRankModel.h  GiftModel.cpp  GiftModel.h  GlobalMailModel.cpp  GlobalMailModel.h  GoldTestModel.cpp  GoldTestModel.h  GuideModel.cpp  GuideModel.h  HeadModel.cpp  HeadModel.h  HeroModel.cpp  HeroModel.h  HeroTestModel.cpp  HeroTestModel.h  IDBModel.cpp  IDBModel.h  MailModel.cpp  MailModel.h  ModelDef.h  PassTeamModel.cpp  PassTeamModel.h  PersonMercenaryModel.cpp  PersonMercenaryModel.h  PvpModel.cpp  PvpModel.h  PvpRankModel.cpp  (+33 more)
Common/GameUser/: GameUser.cpp  GameUser.h  GameUserManager.cpp  GameUserManager.h  UserActionListener.h  UserActionManager.cpp  UserActionManager.h
Common/Protocol/: AchievementProtocol.h  ActiveProtocol.h  BagProtocol.h  BattleProtocol.h  ChatProtocol.h  ErrorCodeProtocol.h  GMProtocol.h  GoldTestProtocol.h  GuideProtocol.h  HeroProtocol.h  HeroTestProtocol.h  InstanceProtocol.h  InternalProtocol.h  LoginProtocol.h  LookProtocol.h  MailProtocol.h  NoticeProtocol.h  PayProtocol.h  Protocol.h  PvpChestProtocol.h  PvpProtocol.h  RankProtocol.h  ServerProtocol.h  SessionProtocol.h  ShopProtocol.h  StageProtocol.h  SummonerProtocol.h  TaskProtocol.h  TeamProtocol.h  TowerTestProtocol.h  UnionExpiditionProtocol.h  UnionProtocol.h  (+1 more)
MatchServer/: CMakeLists.txt  Makefile  MatchServer.vcxproj  MatchServer.vcxproj.filters
ServiceServer/: CMakeLists.txt  Makefile  ServiceServer.vcxproj  ServiceServer.vcxproj.filters
SessionServer/: CMakeLists.txt  Makefile  SessionServer.vcxproj  SessionServer.vcxproj.filters
UnionServer/: CMakeLists.txt  Makefile  UnionServer.vcxproj  UnionServer.vcxproj.filters
(+1283 files in other folders)
